2011-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/reed_solomon.c (init_powx): Set gf_powx_inv[0] just to
	be deterministic.
	(syndroms): Compute 0 syndrom.
	(rs_recover): Use 0 syndrom.

2011-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/kernel.h (FOR_MODULES): Make it a bit faster.

2011-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/types.h (GRUB_PROPERLY_ALIGNED_ARRAY): Add missing
	brackets.

2011-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gfxmenu/widget-box.c (get_left_pad): Take corners into
	account.
	(get_top_pad): Likewise.
	(get_right_pad): Likewise.
	(get_bottom_pad): Likewise.

2011-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gfxmenu/gui_list.c (draw_menu): Don't use assignment in if.

2011-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/efi/api.h (grub_efi_memory_descriptor): Add packed
	attribute as the structure isn't guaranteed to be properly aligned.
	(grub_efi_pci_device_path): Likewise.
	(grub_efi_pccard_device_path): Likewise.
	(grub_efi_memory_mapped_device_path): Likewise. Additionaly explicitly
	specify the size of `memory_type'.
	(grub_efi_vendor_device_path): Likewise.
	(grub_efi_controller_device_path): Likewise.
	(grub_efi_acpi_device_path): Likewise.
	(grub_efi_expanded_acpi_device_path): Likewise.
	(grub_efi_atapi_device_path): Likewise.
	(grub_efi_scsi_device_path): Likewise.
	(grub_efi_fibre_channel_device_path): Likewise.
	(grub_efi_1394_device_path): Likewise.
	(grub_efi_usb_device_path): Likewise.
	(grub_efi_usb_class_device_path): Likewise.
	(grub_efi_i2o_device_path): Likewise.
	(grub_efi_mac_address_device_path): Likewise.
	(grub_efi_ipv4_device_path): Likewise.
	(grub_efi_ipv6_device_path): Likewise.
	(grub_efi_infiniband_device_path): Likewise.
	(grub_efi_uart_device_path): Likewise.
	(grub_efi_vendor_messaging_device_path): Likewise.
	(grub_efi_hard_drive_device_path): Likewise.